--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "next": "^12.1.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "usehooks-ts": "^2.5.3"
   },
   "devDependencies": {
     "@iconify/react": "^3.2.1",
