--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "^12.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recharts": "^2.1.10",
     "usehooks-ts": "^2.5.3"
   },
   "devDependencies": {
