--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "next": "^12.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.1",
     "recharts": "^2.1.10",
     "usehooks-ts": "^2.5.3"
   },
